src/test/ui/suggestions/issue-61226.rs
struct X {}
fn main() {
    vec![X]; //…
    //~^ ERROR expected value, found struct `X`
}
